finished wrapping up my user  registerion form

--- a/Public/style/style.css
+++ b/Public/style/style.css
@@ -128,9 +128,11 @@ NAVIGATION
 /*************************
 MAIN
 ***************************/
-/* #features {
-  background: gray;
-} */
+
+#ask {
+  text-align: center;
+  padding: 5px;
+}
 
 main {
   display: grid;
@@ -145,6 +147,12 @@ main {
   padding: 15px 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#login p {
+  margin-top: 5px;
+  /* font-weight: bold; */
+  color: rgb(167, 165, 164);
 }
 
 #register {
