finished add new friend, view friend request and reject friend request

--- a/Public/style/style.css
+++ b/Public/style/style.css
@@ -480,6 +480,11 @@ FRIENDS
   cursor: pointer;
 }
 
+
+.sent {
+  color: #00c853;
+}
+
 /******************************
 MEDIA QUERIES
 *********************************/
