--- a/Public/style/style.css
+++ b/Public/style/style.css
@@ -131,6 +131,7 @@ NAVIGATION
 #link {
   color: white;
   font-size: 1.2em;
+  transition: 0.3s;
 }
 
 #link:hover {
@@ -181,6 +182,11 @@ main {
   color: rgb(167, 165, 164);
 }
 
+.guide-img {
+  width: 100%;
+  height: auto;
+}
+
 #register {
   padding: 15px 10px;
   /* display: none; */
@@ -193,9 +199,15 @@ main {
   text-align: center;
 }
 
+#guide div {
+  margin-bottom: 10px;
+  font-size: 1.2em;
+}
+
 #guide {
-  background: #00838f;
-  color: white;
+  /* background: #00838f; */
+  color: #00838f;
+  text-align: center;
   border-radius: 10px;
 
   padding: 10px 15px;
@@ -367,6 +379,21 @@ CHAT PAGE
 ********************************
 *******************************/
 
+.fa-pencil-alt {
+  cursor: pointer;
+  display: inline-block;
+  margin-left: 25px;
+  font-size: 1.5em;
+}
+
+#pStatus {
+  text-transform: none;
+}
+
+.modal {
+  text-transform: capitalize;
+}
+
 .well {
   background: white;
   /* padding: 10px; */
@@ -515,9 +542,74 @@ FRIENDS
   border-color: #529c78;
 }
 
+/*******************************
+EDIT PROFILE PAGE
+******************************/
+
+.edit-profile {
+  width: 80%;
+  margin: 150px auto 10px auto;
+
+  display: block;
+}
+
+#upButton:hover {
+  opacity: 0.5;
+}
+
+#upButton {
+  color: #006064;
+  font-size: 2.5em;
+  transition: 0.3s;
+  display: block;
+  width: 10%;
+  cursor: pointer;
+  padding-top: 10px;
+  margin: 0 auto;
+}
+.profile-image {
+  width: 70%;
+  background: #006064;
+  display: block;
+  margin: 0 auto;
+  /* border: 4px dashed #69f0ae; */
+  border-radius: 50%;
+  transition: 0.3s;
+}
+#profileCard {
+  display: grid;
+  grid-template-columns: repeat(12, 8.333%);
+}
+.image-card {
+  grid-column: 1/6;
+}
+.profile-title {
+  grid-column: 6/-1;
+}
+.form-card {
+  grid-column: 6/-1;
+}
+.profile-image:hover {
+  opacity: 0.7;
+}
 /******************************
 MEDIA QUERIES
 *********************************/
+@media only screen and (max-width: 750px) {
+  #profileCard {
+    display: block;
+  }
+  .profile-image {
+    width: 50%;
+    border-radius: 50%;
+  }
+  .profile-title {
+    text-align: center;
+  }
+  .image-card {
+    text-align: center;
+  }
+}
 @media only screen and (max-width: 450px) {
   .main {
     display: block;
@@ -570,6 +662,7 @@ MEDIA QUERIES
   .card.links a span {
     font-size: 0.8em;
   }
+
   #home {
     width: 70%;
   }
